--- a/app.json
+++ b/app.json
@@ -1,65 +1,150 @@
 {
   "name": "GHOST-RIDER",
-  "description": "GHOST-RIDER Whatsapp bot © ᴄʀᴇᴀᴛᴇᴅ ʙʏ TCRONEB HACKX ZW ᴄᴏᴅᴇʀ · · ·",
-  "logo": "https://i.ibb.co/hsjG5HR/1733732474108.jpg",
+  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ ᴀᴡᴀɪs ᴍᴅ",
+  "logo": "https://endpoint.web.id/server/file/8Cmyffly1bMBLr.jpg",
   "keywords": ["bot"],
   "success_url": "/",
 
-      "stack": "container",
+    "stack": "container",
   "env": {
     "SESSION_ID": {
       "description": "Put the session-id here.",
       "required": true,
-      "value": "public"
+      "value": ""
     },  
     
-    "MODE": {
-      "description": "private,inbox,group,public",
+    "ALIVE_IMG": {
+      "description": "paste your image url if you don't have you can use this public url.",
       "required": true,
-      "value": "public"
-   },
+      "value": "https://endpoint.web.id/server/file/8Cmyffly1bMBLr.jpg"
+    }, 
+    
+    "ALIVE_MSG": {
+      "description": "paste your alive message hear.",
+      "required": true,
+      "value": "ʜɪɪ ᴍʏ ᴅᴇᴀʀ ғʀɪᴇɴᴅ ɪᴍ ᴀʟɪᴠᴇ ɴᴏᴡ.!!"
+    },
     
     "PREFIX": {
-      "description": "#,!,/,$",
+      "description": "paste your bot prefix note! Don't apply null prefix.",
       "required": true,
       "value": "."
     },
     
+    "MODE": {
+      "description": "select your bot work type public-private-inbox-group.",
+      "required": true,
+      "value": "public"
+    }, 
+
     "AUTO_VOICE": {
-      "description": "Auto send voice message",
+      "description": "Make it true if you want bot auto voice.",
       "required": true,
       "value": "true"
-    },
-    
+    }, 
+
     "AUTO_REPLY": {
-      "description": "Auto reply message",
+      "description": "Make it true if you want bot auto reply.",
       "required": true,
       "value": "true"
+    }, 
+
+    "AUTO_TYPING": {
+      "description": "Make it true if you want auto typing.",
+      "required": false,
+      "value": "true"
     },
-    
-    "AUTO_REACT": {
-      "description": "Auto react massage",
+
+    "AUTO_STICKER": {
+      "description": "Make it true if you want bot auto sticker.",
       "required": true,
-      "value": "false"
-    },
-    
+      "value": "true"
+    }, 
+
     "AUTO_READ_STATUS": {
-      "description": "Just Now reading status",
+      "description": "Make it true if you want bot auto auto_read_status.",
+      "required": true,
+      "value": "true"
+    }, 
+
+    "ANTI_LINK": {
+      "description": "Make it true if you want bot auto remove group link.",
       "required": true,
       "value": "true"
     },
-    
+
     "ANTI_BAD": {
-      "description": "Bad words remove",
+      "description": "Make it true if you want bot auto delete bad words from group example xxx porn etc.",
+      "required": true,
+      "value": "true"
+    }, 
+
+   "CURRENT_STATUS": {
+      "description": "Make it true if want automatic voice reply .",
+      "required": false,
+      "value": "false"
+    }, 
+
+    "FAKE_RECORDING": {
+      "description": "Make it true if you want bot fake record.",
       "required": true,
       "value": "false"
     },
+
+    "AUTO_REACT": {
+      "description": "Make it true if you want bot AutoReact.",
+      "required": true,
+      "value": "true"
+    },
+
+    "OWNER_REACT": {
+      "description": "Make it true if you want bot OwnerReact.",
+      "required": true,
+      "value": "true"
     
-    "ANTI_LINK": {
-      "description": "Anti link remove",
+    }, 
+
+   "ALWAYS_ONLINE": {
+      "description": "Make it true if want automatic voice reply .",
+      "required": false,
+      "value": "true"
+    }, 
+
+  "AUTO_STATUS_REPLY": {
+      "description": "Make it true if want automatic status reply .",
+      "required": false,
+      "value": "true"
+    },    
+
+    "BOT_NAME": {
+      "description": "write hear your name.",
+      "required": true,
+      "value": "ᴀᴡᴀɪs ᴍᴅ"
+    }, 
+
+    "HEART_REACT": {
+      "description": "Make it true if you want bot only heart ♥️ emjois reaction .",
       "required": true,
       "value": "false"
+    }, 
+
+    "READ_MESSAGE": {
+      "description": "Make it true if you want bot read your all sms just now.",
+      "required": true,
+      "value": "false"
+    }, 
+    "CAPTION": {
+      "description": "enter your caption if you want to show on menu.",
+      "required": true,
+      "value": "*ᴘᴏᴡᴅᴇʀᴇᴅ ʙʏ ᴀᴡᴀɪsxᴄʜᴜᴢᴢᴀ*"
+    }, 
+    "AUTO_STATUS__MSG": {
+      "description": "enter your caption if you want to show on status reply.",
+      "required": true,
+      "value": "𝒚𝒐𝒖𝒓 𝒔𝒕𝒂𝒕𝒖𝒔 𝒔𝒆𝒆𝒏 𝒋𝒖𝒔𝒕 𝒏𝒐𝒘 𝒃𝒚 𝒂𝒘𝒂𝒊𝒔 𝒎𝒅"
     }
+
+
 },
 
      "buildpacks": [
@@ -68,4 +153,4 @@
         }
      ],
   "stack": "heroku-24"
-} 
+}
