--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,19 @@
-FROM node:14
-RUN git clone https://github.com/Awais-star-a11y/AWAIS-MD /root/xIKRATOSx
-WORKDIR /root/xIKRATOSx
-RUN npm install npm@latest || yarn install --network-concurrency 1
+FROM node:lts-buster
+
+RUN apt-get update && \
+  apt-get install -y \
+  ffmpeg \
+  imagemagick \
+  webp && \
+  apt-get upgrade -y && \
+  rm -rf /var/lib/apt/lists/*
+
+COPY package.json .
+
+RUN npm install && npm install qrcode-terminal
+
 COPY . .
-EXPOSE 9090
+
+EXPOSE 5000
+
 CMD ["npm", "start"]
