--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "KERM_MD-V4",
-  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ Kɢ ᴛᴇᴄʜ",
+  "name": "GHOST-RIDER",
+  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ GHOST-RIDER",
   "logo": "https://files.catbox.moe/osriwc.jpg",
   "keywords": ["bot"],
   "success_url": "/",
