--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "SUHAS-MD-V9",
+  "name": "GHOST-RIDER",
   "version": "9.0",
-  "description": "A WhatsApp bot created by 💚 Suhas Pathsindu.💕",
+  "description": "A WhatsApp bot created by 💚 WORLD_OF_TECH TEAM.💕",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name SUHAS-MD-V9",
-    "stop": "pm2 stop SUHAS-MD-V9",
-    "restart": "pm2 restart SUHAS-MD-V9"
+    "start": "pm2 start index.js --deep-monitoring --attach --name GHOST-RIDER",
+    "stop": "pm2 stop GHOST-RIDER",
+    "restart": "pm2 restart GHOST-RIDER"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.6.0",
