--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@ REMOVEBG_KEY = 'yepeTQaFk7r9ymusihgXYvdN'
 PREFIX = '.'
 MODE = 'private'
 autoRead= 'false'
-BOTNAME = 'ULTRA-MD'
+BOTNAME = 'GHOST-RIDER'
 antidelete = 'true'
 BOT_NUMBER= 
 OWNERS = 
