--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
-    name: hermit-md
-    repo: https://github.com/A-d-i-t-h-y-a-n/hermit-bot.git
+    name: GHOST-RIDER
+    repo: https://github.com/Dark-Town/GHOST-RIDER.git
     branch: main
     env: docker
     dockerfilePath: Dockerfile
